# OpenYantra

./: .gitignore  CHANGELOG.md  LICENSE  MYTHOLOGY.md  PRIVACY.md  PROTOCOL.md  README.md  SKILL.md  VISUAL_GUIDE.html  WHITEPAPER.md  chitrapat_template.ods  index.html  install.ps1  install.sh  ios_shortcut.py  openyantra-brand-manual.html  openyantra-brand-manual_v2.html  openyantra.py  pyproject.toml  telegram_bot.py  vidyakosha.py  visual-guide.html  yantra_context.py  yantra_digest.py  yantra_mail.py  yantra_migrate.py  yantra_morning.py  yantra_security.py  yantra_sqlite.py  yantra_ui.py
UI/v3/: dashboard.html
assets/screenshots/: screenshot-banner.html  screenshot-cli.html  screenshot-mobile.html  screenshot-webui.html
docs/: BRAND_MANUAL.md  DEPLOYMENT.md  VISUAL_GUIDE.md  brand-manual.html  visual-guide.html
examples/: bootstrap.py  langchain_adapter.py
openclaw/: hooks.py  plugin.py
references/: controlled-vocab.md
